# vicare-ccdoubles

./: ANNOUNCE  Makefile.am  README  acinclude.m4  configure.ac  configure.sh
doc/: vicare-ccdoubles.texi
lib/: dependencies.make  libraries.scm
lib/vicare/math/: ccdoubles.vicare.sls
lib/vicare/math/ccdoubles/: functions.vicare.sls
tests/: demo-for-plain-documentation.sps  test-vicare-ccdoubles-functions.sps  test-vicare-ccdoubles-high.sps  test-vicare-ccdoubles.sps
